@@ -29,66 +29,191 @@
 
 #include "JackPosixThread.h"
 #include "JackMutex.h"
-
+#include <jack/thread.h>
 
 using namespace Jack;
 
+static void CleanupHandler(void * arg)
+{
+    JackLockAble* locked = (JackLockAble*)arg;
+    printf("CleanupHandler locked %x \n", locked);
+    locked->Unlock();
+}
+
 struct LockedObject : public JackLockAble {
 
-	JackThread* fThread;
     int fCount;
  	
 	LockedObject():fCount(0)
 	{}
     
     virtual ~LockedObject()
-	{
-        fThread->Kill();
-		delete fThread;
-	}
+	{}
     
+    /*
     void LockedMethod1()
     {   
         JackLock lock(this);
         fCount++;
         printf("LockedMethod1 self %x fCount %d\n", pthread_self(), fCount);
-    }
+        if (fCount >= 1000) {
+            printf("Terminate self %x\n", pthread_self());
+            pthread_exit(NULL);
+        }
+   }
     
     void LockedMethod2()
     {   
         JackLock lock(this);
-        fCount--;
+        fCount++;
         printf("LockedMethod2 self %x fCount %d\n", pthread_self(), fCount);
+        if (fCount >= 1500) {
+            printf("Terminate self %x\n", pthread_self());
+            pthread_exit(NULL);
+        }
     }
     
     void LockedMethod3()
     {   
         JackLock lock(this);
-        fCount--;
+        fCount++;
         printf("LockedMethod3 self %x fCount %d\n", pthread_self(), fCount);
+        if (fCount >= 3000) {
+            printf("Terminate self %x\n", pthread_self());
+            pthread_exit(NULL);
+        }
     }
+    */
+    
+    void LockedMethod1()
+    {   
+        pthread_cleanup_push(CleanupHandler, this);
+        Lock();
+        fCount++;
+        //printf("LockedMethod1 self %x fCount %d\n", pthread_self(), fCount);
+        if (fCount >= 1000) {
+            printf("Terminate self = %x  count = %d\n", pthread_self(), fCount);
+            pthread_exit(NULL);
+        }
+        Unlock();
+        pthread_cleanup_pop(0);
+    }
+    
+    void LockedMethod2()
+    {   
+        pthread_cleanup_push(CleanupHandler, this);
+        Lock();
+
+        fCount++;
+        //printf("LockedMethod2 self %x fCount %d\n", pthread_self(), fCount);
+        if (fCount >= 1500) {
+            printf("Terminate self = %x  count = %d\n", pthread_self(), fCount);
+            pthread_exit(NULL);
+        }
+        Unlock();
+        pthread_cleanup_pop(0);
+    }
+    
+    void LockedMethod3()
+    {   
+        pthread_cleanup_push(CleanupHandler, this);
+        Lock();
+
+        fCount++;
+        //printf("LockedMethod3 self %x fCount %d\n", pthread_self(), fCount);
+        if (fCount >= 3000) {
+            printf("Terminate self = %x  count = %d\n", pthread_self(), fCount);
+            pthread_exit(NULL);
+        }
+        Unlock();
+        pthread_cleanup_pop(0);
+    }
+
 
 };
 
 struct TestThread : public JackRunnableInterface {
 
-	JackThread* fThread;
+	JackMachThread* fThread;
     LockedObject* fObject;
     int fNum;
  	
 	TestThread(LockedObject* obj, int num)
 	{
+        printf("TestThread\n");
         fThread = new JackMachThread(this);
         fObject = obj;
         fNum = num;
 	    fThread->StartSync();
- 	}
+   }
 
 	virtual ~TestThread()
 	{
+        printf("DELETE %x\n", fThread);
         fThread->Kill();
 		delete fThread;
 	}
+     
+    bool Execute()
+    {
+		//printf("TestThread Execute\n");
+        switch (fNum) {
+        
+            case 1:
+                fObject->LockedMethod1();
+                /*
+                if (fObject->fCount >= 500) {
+                    printf("Terminate self %x\n", pthread_self());
+                    fThread->Terminate();
+                }
+                */
+                break;
+                
+            case 2:
+                fObject->LockedMethod2();
+                /*
+                if (fObject->fCount >= 1500) {
+                    printf("Terminate self %x\n", pthread_self());
+                    fThread->Terminate();
+                }
+                */
+                break;
+        
+            case 3:
+                fObject->LockedMethod3();
+                /*
+                if (fObject->fCount >= 2000) {
+                    printf("Terminate self %x\n", pthread_self());
+                    fThread->Terminate();
+                }
+                */
+                break;
+        };
+   		
+        //usleep(fNum * 1000);
+		return true;
+    }
+	
+};
+
+static void* TestThread1_Execute(void* arg);
+
+struct TestThread1 : public JackRunnableInterface {
+
+	pthread_t fThread;
+    LockedObject* fObject;
+    int fNum;
+ 	
+	TestThread1(LockedObject* obj, int num)
+	{
+        if (jack_client_create_thread(NULL, &fThread, 0, 0, TestThread1_Execute, this))
+			jack_error( "Can't create the network manager control thread." );
+        fObject = obj;
+        fNum = num;
+ 	}
+
+	virtual ~TestThread1()
+	{}
      
     bool Execute()
     {
@@ -108,21 +233,76 @@ struct TestThread : public JackRunnableInterface {
                 break;
         };
    		
-        usleep(fNum * 1000);
+        //usleep(fNum * 1000);
 		return true;
     }
 	
 };
 
+static void* TestThread1_Execute(void* arg)
+{
+    TestThread1* obj = (TestThread1*)arg;
+    
+    while (true) {
+        //printf("TestThread Execute\n");
+        switch (obj->fNum) {
+            
+                case 1:
+                    obj->fObject->LockedMethod1();
+                    break;
+                    
+                case 2:
+                    obj->fObject->LockedMethod2();
+                    break;
+            
+                case 3:
+                    obj->fObject->LockedMethod3();
+                    break;
+        };
+            
+        //usleep(obj->fNum * 1000);
+    }
+    
+    return 0;
+}
+
 int main (int argc, char * const argv[])
 {
     char c;
-    
+      
     LockedObject obj;
+   
     TestThread th1(&obj, 1);
     TestThread th2(&obj, 2);
     TestThread th3(&obj, 3);
+     
+    /*
+    LockedObject obj;
+    TestThread1 th1(&obj, 1);
+    TestThread th2(&obj, 2);
+    TestThread th3(&obj, 3);
+    */
       
-    while ((c = getchar()) != 'q') {}
+    /*  
+    while ((c = getchar()) != 'q') {
+    
+    }
+    */
+    
+    while (true) {
+        usleep(1000);
+        th1.fThread->Kill();
+    }
+   
+    /*
+    th1.fThread->Kill();
+    th2.fThread->Kill();
+    th3.fThread->Kill();
+    
+     while (true) {
+        //usleep(100000);
+        th1.fThread->Kill();
+    }
+    */
     
 }
